ftps.yaml
# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    ftps.yaml                                          :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: oel-bour <oel-bour@student.42.fr>          +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2020/02/17 21:43:41 by oel-bour          #+#    #+#              #
#    Updated: 2020/02/25 16:26:58 by oel-bour         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  ports:
    - port: 21
      name: ftps
    - port: 21000
      name: ftps-data
  selector:
    app: ftps
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  selector:
    matchLabels:
      app: ftps
  replicas: 1
  strategy:
    restartPolicy: Always
    type: Recreate
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - image: ftps_alpine
        imagePullPolicy: Never
        name: ftps
        ports:
        - containerPort: 21
          hostPort: 21
        - containerPort: 21000
          hostPort: 21000
        volumeMounts:
        - name: ftps-persistent-storage
          mountPath: /ftps
      volumes:
      - name: ftps-persistent-storage
        persistentVolumeClaim:
          claimName: ftps-pv-claim
