grafana.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: grafana
  name: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 3000
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      restartPolicy: Always
      type: Recreate
      containers:
      - name: grafana
        image: grafana_alpine
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
