nginx.yaml
# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    nginx.yaml                                         :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: oel-bour <oel-bour@student.42.fr>          +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2020/02/17 21:44:01 by oel-bour          #+#    #+#              #
#    Updated: 2020/02/25 21:20:26 by oel-bour         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 22
    protocol: TCP
    nodePort: 22
    name: ssh
  - port: 443
    protocol: TCP
    nodePort: 443
    name: https
  - port: 80
    protocol: TCP
    nodePort: 80
    name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      restartPolicy: Always
      containers:
      - name: nginx
        image: nginx_alpine
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 22
